<resources>

    <string name="app_name">Eco</string>

    // menu
    <string name="title_feed">Feed</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_etc">...</string>

    //registerActivity
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="username">Name</string>

    //warnings
    <string name="fieldsIsEmpty">Please, fill in all fields</string>
    // Заполните все поля!
    <string name="wrongData">Incorrect username or password. Please, try again</string>
    // Неверные данные
    <string name="shortNickname">Username is too short</string>
    // Короткий ник
    <string name="nameIsEmpty">Please, enter your name</string>
    // Укажите имя
    <string name="shortPassword">Password is too short</string>
    // короткий пароль
    <string name="emailIsBad">Invalid e-mail</string>
    // Почта говно
    <string name="passwordDNMatch">The password and confirmation password do not match</string>
    // Пароли не совпадают
    <string name="nicknameIsBusy">Username has already been taken</string>
    // Ник занят
    <string name="offlineMode">Server is not response. Offline mode</string>
    // offline mode

    <string name="text">Nick</string>
    // Ник

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
