<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".SignUp">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/nickname" android:hint="@string/nickname"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="53dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:hint="Email" app:layout_constraintStart_toStartOf="@+id/nickname"
                android:layout_marginTop="256dp" app:layout_constraintTop_toBottomOf="@+id/nickname"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/username" app:layout_constraintStart_toStartOf="@+id/nickname"
                android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/nickname"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:hint="@string/password" app:layout_constraintStart_toStartOf="@+id/name"
                android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/name"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_two"
                android:hint="@string/repeatPassword" app:layout_constraintStart_toStartOf="@+id/password"
                android:layout_marginTop="33dp" app:layout_constraintTop_toBottomOf="@+id/password"/>
        <Button
                android:text="@string/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btnRegister" android:layout_marginTop="100dp"
                app:layout_constraintTop_toBottomOf="@+id/password_two" app:layout_constraintHorizontal_bias="0.498"/>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>